# MLP

./: .gitmodules  CMakeLists.txt
src/App/: main.cpp  main.hpp
src/GUI/: paintScene.cpp  paintScene.hpp  trainPreferensWebWidget.cpp  trainPreferensWebWidget.hpp  window.cpp  window.hpp
src/GUI/TrainingNN/: Worker.cpp  Worker.hpp  trainDialog.cpp  trainDialog.hpp
